Fixed Navbar collapse on click

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body { 
-  padding-top: 80px; 
+  padding-top: 50px; 
 }
 
 html {
@@ -26,16 +26,12 @@ html {
 .anchors {
   display: block;
   position: relative;
-  top: -80px;
+  top: -70px;
   visibility: hidden;
 }
 
 .container {
-  padding: 25px 0px;
-}
-
-.navbar {
-  height: 80px;
+  padding: 25px 15px;
 }
 
 .nav-link {
@@ -50,11 +46,11 @@ html {
   align-items: center;
   cursor: pointer;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.25rem !important;
 }
 
 .navbar-nav > li{
-  padding: 5px;
+  padding: 0px 5px;
 }
 
 .fa-fire {
@@ -89,7 +85,7 @@ html {
 /* Main Content CSS */
 .main {
   display: flex;
-  height: 90vh;
+  height: 95vh;
   width: 100%;
   z-index: 1;
   text-align: center;
